--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,11 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  text: MyText
+  title: Rails Validation
+  text: This helper validates the length of the attributes values.
   author: one
 
-two:
-  title: MyString
-  text: MyText
-  author: two
