--- a/config/database.yml
+++ b/config/database.yml
@@ -29,10 +29,10 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: blog
+  username: blog
 
   # The password associated with the postgres role (username).
-  #password:
+  password: example
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -82,4 +82,4 @@ production:
   <<: *default
   database: blog_production
   username: blog
-  password: <%= ENV['blog_DATABASE_PASSWORD'] %>
+  password: <%= ENV['BLOG_DATABASE_PASSWORD'] %>
